# Rlib

./: CMakeLists.txt
binary/: CMakeLists.txt
binary/include/binary/: Common.h  Deserializer.h  Serializer.h
cmake/: CXX1x.cmake  RlibMacros.cmake  test_compiler.cpp
foundation/: CMakeLists.txt
foundation/include/foundation/: Defines.h  Exception.h  Flags.h  StringUtils.h  Uri.h  UriPath.h  UriQuery.h  UriScheme.h
foundation/src/: StringUtils.cpp  Uri.cpp  UriPath.cpp  UriQuery.cpp  UriScheme.cpp
http/: CMakeLists.txt
http/include/http/: Http.h  HttpCode.h  HttpMethod.h  HttpRequest.h  HttpResponse.h  HttpRouter.h  HttpServer.h
http/samples/: CMakeLists.txt
http/samples/SimpleSite/: CMakeLists.txt
http/samples/SimpleSite/files/: index.html  login.html
http/samples/SimpleSite/src/: server.cpp
http/src/: Http.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpRouter.cpp  HttpServer.cpp
net/: CMakeLists.txt
net/include/net/: Exception.h  Socket.h  SocketAddress.h
net/src/: Socket.cpp  SocketAddress.cpp
net/src/private/: SocketAddressV4Impl.h  SocketAddressV6Impl.h  SocketImpl.h
